--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,8 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-webcam": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
